prevent input zoom on mobile

--- a/public/bundle/bundle.css
+++ b/public/bundle/bundle.css
@@ -52,6 +52,9 @@ input[type=text].valid, input[type=email].valid, input[type=password].valid {
   -webkit-filter: blur(3px);
           filter: blur(3px); }
 
+input {
+  font-size: 16px; }
+
 body {
   color: white;
   background-color: #e3f2fd; }
