--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -64,3 +64,7 @@ input[type=text].valid, input[type=email].valid, input[type=password].valid {
 .blur {
   filter: blur(3px);
 }
+
+input {
+	font-size: 16px;
+}
